--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="b_choice">B .</string>
     <string name="c_choice">C .</string>
     <string name="d_choice">D .</string>
+    <string name="your_score">Your Score</string>
 </resources>
